--- a/views/index.mustache
+++ b/views/index.mustache
@@ -10,5 +10,9 @@
 </head>
 <body>
   <h1>Slika Notes</h1>
+  <form action='index.html' method="POST">
+    <input type="text" name="description">
+    <button type="submit">Add</button>
+  </form>
 </body>
 </html>
