--- a/views/index.mustache
+++ b/views/index.mustache
@@ -14,5 +14,10 @@
     <input type="text" name="description">
     <button type="submit">Add</button>
   </form>
+  <ul>
+    {{#newNote}}
+   <li> {{description}} </li>
+    {{/newNote}}
+  </ul>
 </body>
 </html>
